--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
         <div class="project"><a class="link" href="https://sido1-dev.github.io/Digital-Clock/" target="_blank">Didital Clock (Pro)</a></div>
         <div class="project"><a class="link" href="https://sido1-dev.github.io/creative-hover-image-effect/" target="_blank">Creative Hover Image Effect</a></div>
         <div class="project"><a class="link" href="https://sido1-dev.github.io/Notes-App/" target="_blank">Notes App</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
-        <div class="project"><a class="link" href="http://" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
+        <div class="project"><a class="link" href="#" target="_blank">Soon</a></div>
     </section>
 
 
